# 4diac-forte

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  dependencies.spdx  forte_config.h.in
arch/posix/src/: CMakeLists.txt  forte_sem.cpp  forte_thread.cpp  pctimeha.cpp  pctimeha.h  posixsercommlayer.h
core/src/util/: CMakeLists.txt  configFileParser.h  devlog.cpp  mainparam_utils.cpp  plainTimeString.cpp  string_utils.cpp
src/com/HTTP/: CMakeLists.txt  http_config.h.in  http_handler.cpp  http_handler.h  httplayer.cpp  httplayer.h  httpparser.cpp  httpparser.h
src/com/modbus/: CMakeLists.txt  modbusclientconnection.cpp  modbusconnection.cpp  modbusconnection.h  modbushandler.cpp  modbushandler.h  modbuslayer.cpp  modbuslayer.h  modbuspoll.cpp  modbustimedevent.cpp  modbustimedevent.h
src/com/tsn/: CMakeLists.txt  tsn_layer.cpp
src/com/xquery/: CMakeLists.txt  xqueryClientLayer.cpp  xqueryClientLayer.h  xqueryHandler.cpp  xqueryHandler.h
src/core/com/: CMakeLists.txt  basefb.cpp  basefb.h  buffer.h  channel.h  common.cpp  common.h  factory.h  fb.cpp  fb.h  observer.h
src/core/com/impl/: CMakeLists.txt  null.cpp  null.h  raw.cpp  raw.h
src/core/cominfra/: CMakeLists.txt  basecommfb.cpp  basecommfb.h  comCallback.h  comlayer.cpp  comlayer.h  comlayersmanager.h  commfb.cpp  commfb.h  comtypes.h  fbdkasn1layer.cpp  fbdkasn1layer.h  ipcomlayer.cpp  ipcomlayer.h  localcomlayer.cpp  localcomlayer.h  rawdatacomlayer.cpp  rawdatacomlayer.h  serialcomlayerbase.h  structmembercomlayer.cpp  structmembercomlayer.h
src/core/datatypes/convert/: CMakeLists.txt  CharToConvertFunctions.h  TimeInResolutionConvertFunctions.h  WcharToConvertFunctions.h  convert_functions.h  overloadedConvertFunctions.h
src/core/fmi/comm/: CMakeLists.txt  fmuComLayer.cpp  fmuComLayer.h  fmuHandler.cpp  fmuHandler.h
src/core/io/: CMakeLists.txt  IB_fbt.cpp  IB_fbt.h  ID_fbt.cpp  ID_fbt.h  IE_fbt.cpp  IE_fbt.h  IL_fbt.cpp  IL_fbt.h  IW_fbt.cpp  IW_fbt.h  IX_fbt.cpp  IX_fbt.h  QB_fbt.cpp  QB_fbt.h  QD_fbt.cpp  QD_fbt.h  QL_fbt.cpp  QL_fbt.h  QW_fbt.cpp  QW_fbt.h  QX_fbt.cpp  QX_fbt.h  inputfb.h  outputfb.h  processinterface.cpp  processinterface.h  processinterfacefb.cpp  processinterfacefb.h
src/core/io/configFB/: CMakeLists.txt  io_adapter_multi.cpp  io_adapter_multi.h  io_base.cpp  io_base.h  io_configFB_controller.cpp  io_configFB_controller.h  io_controller_part.h  io_controller_split.cpp  io_controller_split.h  io_master_multi.cpp  io_master_multi.h  io_slave_multi.cpp  io_slave_multi.h
src/core/io/device/: CMakeLists.txt  io_controller.cpp  io_controller.h  io_controller_multi.cpp  io_controller_multi.h  io_controller_poll.cpp  io_controller_poll.h
src/core/io/eIO/: CMakeLists.txt  CeBuffer.h  CeConfig.h  CeSpec.h
src/core/io/mapper/: CMakeLists.txt  io_handle.cpp  io_handle.h  io_handle_bit.cpp  io_handle_bit.h  io_mapper.cpp  io_mapper.h  io_observer.cpp  io_observer.h
src/core/trace/: CMakeLists.txt  EventMessage.cpp  EventMessage.h  barectf_platform_forte.cpp  barectf_platform_forte.h  flexibleTracer.cpp  flexibleTracer.h  internalTracer.cpp  internalTracer.h
src/core/trace/classic/: trace_event_output.cpp
src/core/trace/internal/: CMakeLists.txt  EventMessage.cpp  EventMessage.h  flexibleTracer.cpp  flexibleTracer.h  internalTracer.cpp  internalTracer.h
src/core/trace/reader/: CMakeLists.txt  TraceReaderSink.cpp  TraceReaderSink.h  bt2MessageFactory.cpp  bt2MessageFactory.h  utils.cpp  utils.h
src/core/trace/replay_debugging/: trace_event_output.cpp
src/modules/PLC01A1/: CMakeLists.txt  plc01a1_config_fb.cpp  plc01a1_config_fb.h  plc01a1_controller.cpp  plc01a1_controller.h
src/modules/ads/: ADS_SERVER_CONFIG_fbt.cpp  ADS_SERVER_CONFIG_fbt.h  CAdsConnection.cpp  CAdsConnectionManager.h  CAdsProcessInterface.cpp  CMakeLists.txt  SET_LOCAL_ADS_ADDRESS_fbt.cpp  SET_LOCAL_ADS_ADDRESS_fbt.h
src/modules/conmeleon_c1/: CMakeLists.txt  processinterface.cpp  processinterface.h
src/modules/convert/: BOOL2BOOL_fbt.cpp  BOOL2BOOL_fbt.h  BYTE2BYTE_fbt.cpp  BYTE2BYTE_fbt.h  CMakeLists.txt  DINT2DINT_fbt.cpp  DINT2DINT_fbt.h  DWORD2DWORD_fbt.cpp  DWORD2DWORD_fbt.h  GEN_STRUCT_DEMUX_fbt.cpp  GEN_STRUCT_DEMUX_fbt.h  GEN_STRUCT_MUX_fbt.cpp  GEN_STRUCT_MUX_fbt.h  INT2INT_fbt.cpp  INT2INT_fbt.h  LREAL2LREAL_fbt.cpp  LREAL2LREAL_fbt.h  REAL2REAL_fbt.cpp  REAL2REAL_fbt.h  SINT2SINT_fbt.cpp  SINT2SINT_fbt.h  STRING2STRING_fbt.cpp  STRING2STRING_fbt.h  TIME2TIME_fbt.cpp  TIME2TIME_fbt.h  UDINT2UDINT_fbt.cpp  UDINT2UDINT_fbt.h  UINT2UINT_fbt.cpp  UINT2UINT_fbt.h  USINT2USINT_fbt.cpp  USINT2USINT_fbt.h  WORD2WORD_fbt.cpp  WORD2WORD_fbt.h  WSTRING2WSTRING_fbt.cpp  WSTRING2WSTRING_fbt.h
src/modules/embrick/: CMakeLists.txt
src/modules/embrick/handler/: bus.cpp  bus.h  pin.cpp  spi.cpp
src/modules/embrick/slave/: handle.cpp  handle.h  slave.cpp  slave.h
src/modules/embrick/types/: EBBusAdapter.cpp  (+9 more)
src/modules/gpiochip/: CMakeLists.txt  gpiochip_config_fb.cpp  gpiochip_config_fb.h  gpiochip_controller.cpp  gpiochip_controller.h
src/modules/i2c_dev/: CMakeLists.txt
src/modules/lms_ev3/: CMakeLists.txt  fileReader_fbt.h  fileWriter_fbt.h  processinterface.cpp
src/modules/mlpi/: CMakeLists.txt  processinterface.cpp  processinterface.h
src/modules/odroid/: CMakeLists.txt  processinterface.cpp
src/modules/piface/: CMakeLists.txt  processinterface.cpp  processinterface.h
src/modules/reconfiguration/: CMakeLists.txt  EC_KILL_ELEM_fbt.cpp  EC_KILL_ELEM_fbt.h  EC_SET_EVT_fbt.cpp  EC_SET_EVT_fbt.h  EC_START_ELEM_fbt.cpp  EC_START_ELEM_fbt.h  EC_STOP_ELEM_fbt.cpp  EC_STOP_ELEM_fbt.h  ST_CREATE_CONN_fbt.cpp  ST_CREATE_CONN_fbt.h  ST_CREATE_FB_fbt.cpp  ST_CREATE_FB_fbt.h  ST_DEL_CONN_fbt.cpp  ST_DEL_CONN_fbt.h  ST_DEL_FB_fbt.cpp  ST_DEL_FB_fbt.h  ST_REC_CONN_fbt.cpp  ST_REC_CONN_fbt.h  ST_SET_PARM_fbt.cpp  ST_SET_PARM_fbt.h
src/modules/revolutionPi/: CMakeLists.txt  RevPiConfig.h  RevPiController.cpp  RevPiController.h  RevPiHandle.cpp  RevPiHandle.h
src/modules/umic/: CMakeLists.txt  processinterface.cpp  processinterface.h
(+4176 files in other folders)
